--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@google-cloud/logging-winston": "^5.3.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.7",
     "@nestjs/config": "^2.3.0",
@@ -44,12 +43,10 @@
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "mysql2": "^3.1.2",
-    "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.1.2",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.12",
-    "winston": "^3.8.2"
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@automock/jest": "^1.0.1",
