--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "^9.3.7",
     "@nestjs/platform-express": "^9.3.7",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.3.2",
@@ -54,6 +55,7 @@
     "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.7",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/jest": "29.4.0",
     "@types/node": "^18.13.0",
