--- a/.github/workflows/ci_main.yml
+++ b/.github/workflows/ci_main.yml
@@ -24,6 +24,8 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Lint files
         run: pnpm lint:all
+      - name: Check TypeScript
+        run: pnpm lint:types
       - name: Test files
         run: pnpm test:cov
       - name: Build project
