--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cron-validate": "^1.4.5",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "pg": "^8.9.0",
