--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -32,6 +32,7 @@ jobs:
           # Set latest tag for default branch
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=branch
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
