--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker-compose build --no-cache --force-rm app
-  docker-test:
-    name: Test Docker Compose
-    runs-on: ubuntu-latest
-    env:
-      DB_PORT: 5432
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test the Docker image
-        run: docker-compose up -d app
+        run: docker-compose up --build --force-recreate -d app
   project-build:
     name: Build Checks
     runs-on: ubuntu-latest
