--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -20,11 +20,8 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          install: true
-          driver-opts: |
-            image=moby/buildkit:master
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -40,9 +37,10 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=branch
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
+          platforms: ${{ steps.buildx.outputs.platforms }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
