--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/amd64,linux/arm/v7,linux/amd64/v8,linux/ppc64le,linux/s390x
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
