--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.0",
     "cron-validate": "^1.4.5",
     "dotenv": "^16.0.3",
+    "ioredis": "^5.3.1",
     "joi": "^17.7.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
